--- a/Lecture 03/Lecture 3.ipynb
+++ b/Lecture 03/Lecture 3.ipynb
@@ -189,9 +189,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# You create an array by converting a list [1,2,3] to a numeric object\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# \"array\" is a subfunction of the library numPy.\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m vec_a  \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m])\n\u001b[1;32m      5\u001b[0m vec_b  \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m0\u001b[39m])\n\u001b[1;32m      6\u001b[0m vec_c  \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([\u001b[39m10\u001b[39m,\u001b[39m100\u001b[39m,\u001b[39m1000\u001b[39m,\u001b[39m2000\u001b[39m,\u001b[39m5000\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# You create an array by converting a list [1,2,3] to a numeric object\n",
     "# \"array\" is a subfunction of the library numPy.\n",
