--- a/Lecture 08/Lecture 8.ipynb
+++ b/Lecture 08/Lecture 8.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Message\n"
+      "Hello\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "float"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,16 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.141593"
+       "3.1415927"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,12 +133,12 @@
     "# Second Argument:  6         (the number of decimals)\n",
     "# Return:  Round the first argument, given the number of decimals in the second argument\n",
     "\n",
-    "round(np.pi,  6)\n"
+    "round(np.pi,  7)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "4"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "3"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -328,16 +328,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code here\n",
     "\n",
+    "def fn_compute_value_two(x):\n",
+    "    Y = x**2 + 2*x + 1\n",
+    "    return(Y)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(fn_compute_value_two(3))"
    ]
   },
   {
@@ -358,17 +367,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fail\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
+    "def fn_numeric_grade(grade):\n",
+    "    if (grade >= 55):\n",
+    "        status = \"pass\"\n",
+    "    else:\n",
+    "        status = \"fail\"\n",
+    "    return(status)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(fn_numeric_grade(54))"
    ]
   },
   {
@@ -390,16 +410,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear customer Stacy Shin, your car model BMW is ready\n",
+      "Dear customer David Shin, your car model porsche is ready\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
+    "def fn_cars (first_name, last_name, car_model):\n",
+    "    return(\"Dear customer \" + first_name + \" \" + last_name + \", your car model \" + car_model + \" is ready\")\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "print(fn_cars(\"Stacy\", \"Shin\", \"BMW\"))\n",
+    "print(fn_cars(\"David\", \"Shin\", \"porsche\"))\n",
     "\n"
    ]
   },
@@ -431,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +470,7 @@
        "6"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -511,15 +541,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
+    "fn_iseligible_vote = lambda age: age >= 18\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(fn_iseligible_vote(17))\n",
+    "print(fn_iseligible_vote(18))\n",
+    "print(fn_iseligible_vote(19))"
    ]
   },
   {
@@ -538,15 +579,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, False, True, False]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
+    "list_ages = [18,29,15,32,6]\n",
+    "list_eligible = []\n",
     "\n",
-    "\n",
+    "for ages in range(len(list_ages)):\n",
+    "    list_eligible.append(fn_iseligible_vote(list_ages[ages]))\n",
+    "        \n",
+    "print(list_eligible)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, False, True, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# OR *This is messed up must fix\n",
+    "list_eligible = []\n",
+    "for ages in list_ages:\n",
+    "    list_eligible.append(fn_iseligible_vote(ages))\n",
+    "\n",
+    "print(list_eligible)"
    ]
   },
   {
@@ -639,7 +715,16 @@
    "source": [
     "# Write your own code\n",
     "\n",
+    "def red_scatter(vec_x,title):\n",
+    "    plt.scatter(x = vec_x, y = vec_y, color = \"red\")\n",
+    "    plt.title(title)\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "    plt.show()\n",
     "\n",
+    "carfeatures = pd.read_csv(\"data/features.csv\")\n",
+    "\n",
+    "red_histogram(vec_x = carfeatures[\"weight\"], title = \"Histogram\")\n",
+    "red_histogram(vec_x = carfeatures[\"acceleration\"], title = \"Histogram\")\n",
     "\n",
     "\n",
     "\n",
@@ -650,7 +735,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -664,12 +749,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "45fc1f684f6f416f40889115beff3ddf69879b64cf4bfee48cb72a61e9d15d1a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
