--- a/Lecture 13/Lecture 13.ipynb
+++ b/Lecture 13/Lecture 13.ipynb
@@ -454,8 +454,8 @@
    "source": [
     "# Write your own code\n",
     "\n",
-    "circuits[\"country\"] = circuits[\"country\"].replace(\"UK\",\"United Kingdom\")\n",
-    "circuits[\"country\"] = circuits[\"country\"].replace([\"UK\"],[\"United Kingdom\"])\n",
+    "circuits[\"country\"] = circuits[\"country\"].replace(\"UK\", \"United States\")\n",
+    "\n",
     "\n"
    ]
   },
@@ -467,7 +467,7 @@
     "<font size = \"5\">\n",
     "Try it yourself!\n",
     "\n",
-    "- What is the column type of \"lat\" or \"lng\"?\n",
+    "- What is the column type of \"lat\" or \"long\"?\n",
     "- Does it have any string variables?"
    ]
   },
@@ -490,7 +490,8 @@
     "\n",
     "print(circuits[\"lat\"].dtype)\n",
     "print(circuits[\"lng\"].dtype)\n",
-    "\n"
+    "\n",
+    "# la tand long are both floating point numbers without any strings"
    ]
   },
   {
@@ -524,26 +525,6 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('O')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "circuits[\"alt\"].dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# Uncomment this command to see the error\n",
@@ -564,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +598,7 @@
     "#       then intervals are \"Less than or equal to 2500\" and \"Above 2500\"\n",
     "#       float(\"inf\") and float(\"-inf\") represent infinity and negative infinity\n",
     "#       The \"right\" command indicates that the right interval is\n",
-    "#       \"less than or equal to\" or just \"less than\""
+    "#       \"less than or equal to\""
    ]
   },
   {
@@ -635,25 +616,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# Write your own code\n",
     "\n",
-    "bins_hemisphere = [-90,0,90]\n",
-    "labels_hemisphere = [\"Southern hemisphere\",\"Northern Hemisphere\"]\n",
+    "bins_hemi = [-90, 0, 90]\n",
+    "labels_hemi = [\"South\", \"North\"]\n",
+    "\n",
     "circuits[\"hemisphere\"] = pd.cut(circuits[\"lat\"],\n",
-    "                                bins = bins_hemisphere,\n",
+    "                                bins = bins_hemi,\n",
     "                                right = True,\n",
-    "                                labels = labels_hemisphere)\n",
-    "\n"
+    "                                labels = labels_hemi)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -667,12 +649,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "45fc1f684f6f416f40889115beff3ddf69879b64cf4bfee48cb72a61e9d15d1a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
