--- a/Lecture 15/Lecture 15.ipynb
+++ b/Lecture 15/Lecture 15.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -299,14 +299,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old List:\n",
+      "['raceId' 'year' 'round' 'circuitId' 'name' 'date' 'time' 'url' 'fp1_date'\n",
+      " 'fp1_time' 'fp2_date' 'fp2_time' 'fp3_date' 'fp3_time' 'quali_date'\n",
+      " 'quali_time' 'sprint_date' 'sprint_time']\n",
+      "\n",
+      "New List:\n",
+      "['raceId' 'year' 'round' 'circuitId' 'race_name' 'date' 'time' 'url'\n",
+      " 'fp1_date' 'fp1_time' 'fp2_date' 'fp2_time' 'fp3_date' 'fp3_time'\n",
+      " 'quali_date' 'quali_time' 'sprint_date' 'sprint_time']\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
+    "dict_rename_race = {\"name\" : \"race_name\"}\n",
+    "races = races_raw.rename(columns = dict_rename_race)\n",
     "\n",
-    "\n"
+    "# Checking if the renaming worked:\n",
+    "print(\"Old List:\")\n",
+    "print(races_raw.columns.values)\n",
+    "print(\"\")\n",
+    "print(\"New List:\")\n",
+    "print(races.columns.values)"
    ]
   },
   {
@@ -329,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +458,7 @@
        "[77 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,9 +488,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>raceId</th>\n",
+       "      <th>circuitId</th>\n",
+       "      <th>circuit_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>760</th>\n",
+       "      <td>761</td>\n",
+       "      <td>61</td>\n",
+       "      <td>AVUS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>434</th>\n",
+       "      <td>435</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Adelaide Street Circuit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>335</th>\n",
+       "      <td>336</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Adelaide Street Circuit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>319</th>\n",
+       "      <td>320</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Adelaide Street Circuit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>370</th>\n",
+       "      <td>371</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Adelaide Street Circuit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>501</th>\n",
+       "      <td>502</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Zolder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>486</th>\n",
+       "      <td>487</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Zolder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>470</th>\n",
+       "      <td>471</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Zolder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>516</th>\n",
+       "      <td>517</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Zolder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>608</th>\n",
+       "      <td>609</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Zolder</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1102 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     raceId  circuitId             circuit_name\n",
+       "760     761         61                     AVUS\n",
+       "434     435         29  Adelaide Street Circuit\n",
+       "335     336         29  Adelaide Street Circuit\n",
+       "319     320         29  Adelaide Street Circuit\n",
+       "370     371         29  Adelaide Street Circuit\n",
+       "..      ...        ...                      ...\n",
+       "501     502         40                   Zolder\n",
+       "486     487         40                   Zolder\n",
+       "470     471         40                   Zolder\n",
+       "516     517         40                   Zolder\n",
+       "608     609         40                   Zolder\n",
+       "\n",
+       "[1102 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# The \"pd.merge()\" command combines the information from both datasets\n",
     "# The first argument is the \"primary\" datasets\n",
@@ -478,12 +620,14 @@
     "races_merge = pd.merge(races_raw,\n",
     "                       circuits[[\"circuitId\",\"circuit_name\"]],\n",
     "                       on = \"circuitId\",\n",
-    "                       how = \"left\")"
+    "                       how = \"left\")\n",
+    "\n",
+    "display(races_merge[[\"raceId\",\"circuitId\",\"circuit_name\"]].sort_values(by = \"circuit_name\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -528,8 +672,8 @@
     "                               on = \"circuitId\",\n",
     "                               how = \"left\")\n",
     "\n",
-    "# Python will internally rename the columns \"name_x\" (for the left dataset)\n",
-    "# and \"name_y\" (for the right dataset)\n",
+    "# Python will internally rename the columns \"name_x\" (for the left/primary dataset)\n",
+    "# and \"name_y\" (for the right/secondary dataset)\n",
     "\n",
     "print(races_merge_pitfall.columns.values)\n"
    ]
@@ -552,14 +696,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old List:\n",
+      "['raceId' 'year' 'round' 'circuitId' 'race_name' 'date' 'time' 'url'\n",
+      " 'fp1_date' 'fp1_time' 'fp2_date' 'fp2_time' 'fp3_date' 'fp3_time'\n",
+      " 'quali_date' 'quali_time' 'sprint_date' 'sprint_time' 'circuit_name']\n",
+      "\n",
+      "New List:\n",
+      "['raceId' 'year' 'round' 'circuitId' 'race_name' 'date' 'time' 'url'\n",
+      " 'fp1_date' 'fp1_time' 'fp2_date' 'fp2_time' 'fp3_date' 'fp3_time'\n",
+      " 'quali_date' 'quali_time' 'sprint_date' 'sprint_time' 'circuit_name']\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
+    "dict_rename_pitfall = {\"name_x\": \"race_name\",\n",
+    "                       \"name_y\": \"circuit_name\"}\n",
+    "races_merge_pitfall = races_merge_pitfall.rename(columns = dict_rename_pitfall)\n",
     "\n",
-    "\n"
+    "print(\"Old List:\")\n",
+    "print(races_merge_pitfall.columns.values)\n",
+    "print(\"\")\n",
+    "print(\"New List:\")\n",
+    "print(races_merge_pitfall.columns.values)"
    ]
   },
   {
@@ -577,14 +744,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['raceId', 'year', 'round', 'circuitId', 'name', 'date', 'time',\n",
+       "       'url', 'fp1_date', 'fp1_time', 'fp2_date', 'fp2_time', 'fp3_date',\n",
+       "       'fp3_time', 'quali_date', 'quali_time', 'sprint_date',\n",
+       "       'sprint_time', 'alt', 'lng', 'lat'], dtype=object)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
+    "circuits_merge = pd.merge(races_raw,\n",
+    "                         circuits_raw[[\"circuitId\",\"alt\",\"lng\",\"lat\"]],\n",
+    "                         on = \"circuitId\",\n",
+    "                         how = \"left\")\n",
     "\n",
-    "\n"
+    "circuits_merge.columns.values\n"
    ]
   },
   {
@@ -607,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,21 +842,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your own code\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "circuits_concat_usa_malaysia = pd.concat([circuits_usa,circuits_malaysia])\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -685,12 +868,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "45fc1f684f6f416f40889115beff3ddf69879b64cf4bfee48cb72a61e9d15d1a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
