--- a/Lecture 13/Lecture 13.ipynb
+++ b/Lecture 13/Lecture 13.ipynb
@@ -454,8 +454,8 @@
    "source": [
     "# Write your own code\n",
     "\n",
-    "circuits[\"country\"] = circuits[\"country\"].replace(\"UK\", \"United States\")\n",
-    "\n",
+    "circuits[\"country\"] = circuits[\"country\"].replace(\"UK\",\"United Kingdom\")\n",
+    "circuits[\"country\"] = circuits[\"country\"].replace([\"UK\"],[\"United Kingdom\"])\n",
     "\n"
    ]
   },
@@ -467,7 +467,7 @@
     "<font size = \"5\">\n",
     "Try it yourself!\n",
     "\n",
-    "- What is the column type of \"lat\" or \"long\"?\n",
+    "- What is the column type of \"lat\" or \"lng\"?\n",
     "- Does it have any string variables?"
    ]
   },
@@ -490,8 +490,7 @@
     "\n",
     "print(circuits[\"lat\"].dtype)\n",
     "print(circuits[\"lng\"].dtype)\n",
-    "\n",
-    "# la tand long are both floating point numbers without any strings"
+    "\n"
    ]
   },
   {
@@ -525,6 +524,26 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circuits[\"alt\"].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Uncomment this command to see the error\n",
@@ -545,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +617,7 @@
     "#       then intervals are \"Less than or equal to 2500\" and \"Above 2500\"\n",
     "#       float(\"inf\") and float(\"-inf\") represent infinity and negative infinity\n",
     "#       The \"right\" command indicates that the right interval is\n",
-    "#       \"less than or equal to\""
+    "#       \"less than or equal to\" or just \"less than\""
    ]
   },
   {
@@ -616,20 +635,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Write your own code\n",
     "\n",
-    "bins_hemi = [-90, 0, 90]\n",
-    "labels_hemi = [\"South\", \"North\"]\n",
-    "\n",
+    "bins_hemisphere = [-90,0,90]\n",
+    "labels_hemisphere = [\"Southern hemisphere\",\"Northern Hemisphere\"]\n",
     "circuits[\"hemisphere\"] = pd.cut(circuits[\"lat\"],\n",
-    "                                bins = bins_hemi,\n",
+    "                                bins = bins_hemisphere,\n",
     "                                right = True,\n",
-    "                                labels = labels_hemi)"
+    "                                labels = labels_hemisphere)\n",
+    "\n"
    ]
   }
  ],
