--- a/Lecture 16/Lecture 16.ipynb
+++ b/Lecture 16/Lecture 16.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "[262 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "[176 rows x 1 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "131              12.363643"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +465,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can reference subattributes of columns in \".query()\"\n",
+    "# The pd.unique() function extracts unique values from a list\n",
+    "\n",
+    "subset      = circuits.query(\"alt.str.isnumeric() == False\")\n",
+    "list_unique = pd.unique(subset[\"alt\"])\n",
+    "print(list_unique)\n",
+    "\n",
+    "# \"list_old\" encodes values we want to change\n",
+    "# \"list_new\" encodes the values that will \"replace\" the old\n",
+    "list_old = ['\\\\N','-7']\n",
+    "list_new = [np.nan,-7]\n",
+    "\n",
+    "# This command replaces the values of the \"alt\" column\n",
+    "circuits[\"alt\"] = circuits[\"alt\"].replace(list_old, list_new)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -476,6 +498,35 @@
     "- Use the \"pd.cut()\" command to create <br>\n",
     "a new column based on an interval.\n",
     "- See Lecture 14 for more details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins_x = [0,2500, 5000]\n",
+    "labels_x = [\"Between 0 and 2500\",\n",
+    "            \"Between 2500 and 5000\"]\n",
+    "\n",
+    "circuits[\"bins_alt\"] = pd.cut(circuits[\"alt_numeric\"],\n",
+    "                              bins = bins_x,\n",
+    "                              right = True,\n",
+    "                              labels = labels_x)\n",
+    "\n",
+    "# Note: if we set bins_x = [float(\"-inf\"),2500, float(\"inf\")]\n",
+    "#       then intervals are \"Less than or equal to 2500\" and \"Above 2500\"\n",
+    "#       float(\"inf\") and float(\"-inf\") represent infinity and negative infinity\n",
+    "#       The \"right\" command indicates that the right interval is\n",
+    "#       \"less than or equal to\" or just \"less than\"\n",
+    "\n",
+    "bins_hemisphere = [-90,0,90]\n",
+    "labels_hemisphere = [\"Southern hemisphere\",\"Northern Hemisphere\"]\n",
+    "circuits[\"hemisphere\"] = pd.cut(circuits[\"lat\"],\n",
+    "                                bins = bins_hemisphere,\n",
+    "                                right = True,\n",
+    "                                labels = labels_hemisphere)"
    ]
   },
   {
@@ -493,6 +544,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use \".query()\" to subset observations with 'race_id >= 200'\n",
+    "# Compute the mean and standard deviation of \"laps\",\n",
+    "# grouping by \"constructorId\". Store the new dataset\n",
+    "# as \"results_agg\"\n",
+    "\n",
+    "results_agg = (results.query(\"raceId >= 200\")\n",
+    "                       .groupby([\"constructorId\"])\n",
+    "                        .agg(mean_laps = ('laps','mean'),\n",
+    "                             sd_laps =   ('laps','std')))\n",
+    "\n",
+    "# Other functions\n",
+    "                            min_points =  ('points','min'),\n",
+    "                            max_points =  ('points','max'),\n",
+    "                            count_obs   = ('points',len)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -507,6 +580,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# - Create a new dataset by chaining that groups by \"constructorId\" \n",
+    "# then computes the average number of \"points\"\n",
+    "# - Add a chain \".sort_values(...,ascending = False)\"\n",
+    "# to sort by team points in desceding order\n",
+    "\n",
+    "constructor_agg = (results.groupby(\"constructorId\")\n",
+    "                          .agg(mean_points = (\"points\",\"mean\"))\n",
+    "                          .sort_values(\"mean_points\",ascending = False))\n",
+    "\n",
+    "\n",
+    "constructor_agg"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -517,6 +609,39 @@
     "- Create a dictionary\n",
     "- Rename one or more columns in a dataset <br>\n",
     "using the dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We first define the dictionary\n",
+    "# Change the pipe \".rename(...)\" to rename the columns\n",
+    "# Dictionaries can flexibly accommodate single values or list after \":\"\n",
+    "\n",
+    "dict_rename_circuits = {\"name\": \"circuit_name\"}\n",
+    "circuits = circuits_raw.rename(columns = dict_rename_circuits)\n",
+    "\n",
+    "# Extract the column names of the \"raw\" and \"clean\" data\n",
+    "\n",
+    "print(\"Old List:\")\n",
+    "print(circuits_raw.columns.values)\n",
+    "print(\"\")\n",
+    "print(\"New List:\")\n",
+    "print(circuits.columns.values)\n",
+    "\n",
+    "# Another example\n",
+    "\n",
+    "# - Create a dictionary to rename \"name\" to \"race_name\"\n",
+    "# - Rename this column in the \"races_raw\" dataset\n",
+    "# - Store the output in a new dataset called \"races\"\n",
+    "\n",
+    "dict_rename_races = { \"name\": \"race_name\" }\n",
+    "races = races_raw.rename(columns = dict_rename_races)\n",
+    "\n",
+    "#to rename multiple colums, just separate with a comma"
    ]
   },
   {
@@ -534,11 +659,41 @@
     "- Use \"display\" to show a the merged dataset,  <br>\n",
     "extracting a subset of the columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# - Merge the column \"alt\", \"lng\", and \"lat\" into the races data <br>\n",
+    "# using \"pd.merge()\n",
+    "\n",
+    "races_merge = pd.merge(races_raw,\n",
+    "                       circuits[[\"circuitId\",\"alt\",\"lng\",\"lat\"]],\n",
+    "                       on = \"circuitId\",\n",
+    "                       how = \"left\")\n",
+    "\n",
+    "print(races_merge.columns.values)\n",
+    "\n",
+    "# The \"pd.merge()\" command combines the information from both datasets\n",
+    "# The first argument is the \"primary\" datasets\n",
+    "# The second argument is the \"secondary\" dataset (much include the \"on\" column)\n",
+    "# The \"on\" is the common variable that is used for merging\n",
+    "# how = \"left\" tells Python that the left dataset is the primary one\n",
+    "\n",
+    "races_merge = pd.merge(races_raw,\n",
+    "                       circuits[[\"circuitId\",\"circuit_name\"]],\n",
+    "                       on = \"circuitId\",\n",
+    "                       how = \"left\")\n",
+    "\n",
+    "races_merge[[\"raceId\",\"circuitId\",\"circuit_name\"]].sort_values(by = \"circuit_name\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -552,12 +707,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "45fc1f684f6f416f40889115beff3ddf69879b64cf4bfee48cb72a61e9d15d1a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
