--- a/Lecture 23/Lecture 23.ipynb
+++ b/Lecture 23/Lecture 23.ipynb
@@ -90,11 +90,155 @@
     "\n",
     "(f) Convert a dataset to long format\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# question a\n",
+    "\n",
+    "#import libraries\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.dates as mdates\n",
+    "from datetime import date, time, datetime\n",
+    "\n",
+    "#import data\n",
+    "financial = pd.read_csv(\"data_raw/financial.csv\")\n",
+    "\n",
+    "#sort dataset\n",
+    "#parse column called date_ex3 using table for format\n",
+    "date3 = pd.to_datetime(financial[\"date_ex3\"], format = \"%b-%d, %y\")\n",
+    "\n",
+    "display(date3)\n",
+    "\n",
+    "# In \"freq\" specify the letter for the level of aggregation\n",
+    "# year (y), month (m), week (w), day(d)\n",
+    "\n",
+    "financial[\"week\"] = financial[\"date\"].dt.to_period(freq = \"w\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# question b\n",
+    "\n",
+    "# Enter the x-axis column and y-axis columns you \n",
+    "# wish to include. Specify the x-axis column with \"set_index()\"\n",
+    "# This applies to any line plot, with or without dates\n",
+    "# The legend is the box with the name of the lines\n",
+    "# If you drop the \".legend()\" command this will assign\n",
+    "# the default column names to the legend.\n",
+    "\n",
+    "\n",
+    "financial[[\"date\",\"sp500\",\"djia\"]].set_index(\"date\").plot()\n",
+    "plt.xlabel(\"Time\")\n",
+    "plt.ylabel(\"Value of Index Funds\")\n",
+    "plt.legend([\"S&P 500\",\"Dow Jones\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# question c\n",
+    "\n",
+    "# \".shif(1)\" compute a new column with the value of \"sp500\"\n",
+    "# one period before. By convention the first column is assigned\n",
+    "# a missing value\n",
+    "# We can combine \".diff()\" and \".shift()\" to compute growth rates\n",
+    "\n",
+    "financial[\"lag_sp500\"]    = financial[\"sp500\"].shift(1)\n",
+    "financial[\"growth_sp500\"] = financial[\"diff_sp500\"]* 100/financial[\"lag_sp500\"]\n",
+    "\n",
+    "display(financial[[\"sp500\",\"lag_sp500\",\"diff_sp500\",\"growth_sp500\"]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# question d\n",
+    "\n",
+    "# flag oberservations\n",
+    "\n",
+    "financial[\"bool_period\"]  = financial[\"date\"].between(\"2020-03-01\",\"2020-05-01\")\n",
+    "financial[\"bool_example\"] = financial[\"growth_sp500\"] > 5\n",
+    "\n",
+    "# Create a line plot\n",
+    "plt.plot(\"date\", \"growth_sp500\", data = financial)\n",
+    "plt.xlabel(\"Time\")\n",
+    "plt.ylabel(\"Daily percentage change \")\n",
+    "plt.title(\"The S&P 500 during the start of COVID\")\n",
+    "\n",
+    "# Add a shaded region wth a rectangle\n",
+    "# \"x\" is the x-coordinates, \"y1\" and \"y2\" are the lower\n",
+    "# and upper bounds of the rectangle. We can set this\n",
+    "# to be the minimum and meximum of the outcome.\n",
+    "# we use \"where\" to test a logical condition\n",
+    "\n",
+    "vec_y = financial[\"growth_sp500\"]\n",
+    "plt.fill_between(x= financial[\"date\"],\n",
+    "                 y1 = vec_y.min(),\n",
+    "                 y2 = vec_y.max(),\n",
+    "                 where = financial[\"bool_period\"],\n",
+    "                 alpha = 0.2,color = \"red\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# question e\n",
+    "\n",
+    "# First sort columns by date. The second computes the\n",
+    "# differences in \"sp500\" between each row and the one before it\n",
+    "# By convention, the first row gets a missing value because\n",
+    "# there is nothing to compare. For this to work, it's important\n",
+    "# that the dataset is sorted.\n",
+    "\n",
+    "financial[\"diff_sp500\"] = financial[\"sp500\"].diff()\n",
+    "\n",
+    "display(financial[[\"sp500\",\"diff_sp500\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# question f\n",
+    "\n",
+    "# convert the \"growth_sp500\" and \"growth_dija\" to long format\n",
+    "# Note: You can give any custom value to \"var_name\" or \"value_name\"\n",
+    "\n",
+    "financial_long = pd.melt(financial,\n",
+    "                         var_name   = \"series\",\n",
+    "                         value_name = \"daily_growth\",\n",
+    "                         id_vars='date',\n",
+    "                         value_vars=['growth_sp500','growth_djia'])\n",
+    "\n",
+    "display(financial_long)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -108,9 +252,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
